# django-df-auth

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.rej  runtests.py  setup.cfg
.github/workflows/: release.yml  test.yml
df_auth/: admin.py  apps.py  backends.py  contants.py  defaults.py  djangoflow.py  exceptions.py  managers.py  messages.py  models.py  permissions.py  remote_config.py  serializers.py  settings.py  social_auth.py  strategy.py  tests.py  urls.py  utils.py  views.py  viewsets.py
df_auth/djangoflow/: defaults.py  settings.py
df_auth/drf/: serializers.py  serializers.py.rej  urls.py  urls.py.rej  viewsets.py  viewsets.py.rej
df_auth/migrations/: 0001_initial.py  0002_alter_user2fa_user_userregistration.py  0002_userregistration.py  0003_alter_userregistration_is_registering.py
df_auth/templatetags/: auth_magic_link.py
df_auth/views/: base.py  social_views.py
df_auth/viewsets/: __init__.py  signin.py  token.py
docs/: TODO.md  index.rst  requirements.md
example/: README.rst
example/app/: urls.py  views.py
example/example/: settings.py  urls.py
tests/: settings.py  settings.py.rej  test_demo.py  urls.py
tests/test_app/: admin.py  models.py  test_serializers.py  tests.py
tests/test_app/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_phone_number.py  0002_remove_user_username_alter_user_email_and_more.py  0003_alter_user_email_alter_user_phone_number.py  0004_remove_user_username.py  0005_alter_user_managers.py  0006_user_username.py  0007_user_invited_by.py  0008_rename_invited_by_user_created_by.py  0009_rename_created_by_user_invited_by.py  0010_user_is_2fa_enabled.py  0011_rename_invited_by_user_created_by.py  0012_alter_user_managers_remove_user_is_2fa_enabled.py  0013_remove_user_created_by.py
