[flake8]
max-line-length = 160
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,examples,config/settings,tests,tests.py
ignore = W503, F403, F405

[pycodestyle]
max-line-length = 160
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[tools.black]
max-line-length = 160

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 160

[metadata]
name = django-df-auth
version = 0.23
description = Opinionated Django REST auth endpoints for JWT authentication and social accounts.
long_description = file: README.md
url = https://apexive.com/
author = Apexive OSS
author_email = open-source@apexive.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django
    Django-Rest-Framework
    django-otp
    django-otp-twilio
    djangorestframework-simplejwt
    twilio
    social-auth-app-django
